--- a/client/one/partials/zem_campaign_goals.html
+++ b/client/one/partials/zem_campaign_goals.html
@@ -17,7 +17,7 @@
                         Meet or beat the goal of <strong>{{ formatGoalValue(goal) }}</strong>.
                     </div>
                     <div ng-if="goal.type === 4" class="conv-goal-text">
-                        Connected with conversion {{ goal.conversionGoal.name }}. <a ng-if="goal.conversionGoal.pixelUrl" ng-click="copyConversionPixelTag(goal.conversionGoal, $event)" href="javascript:;">Copy tag</a>
+                        Connected with conversion {{ goal.conversionGoal.name }}. <a ng-if="goal.conversionGoal.pixelUrl" ng-click="copyConversionPixelTag(goal.conversionGoal, $event)">Copy tag</a>
                     </div>
                 </div>
             </div>
