--- a/client/one/partials/edit_campaign_goal_modal.html
+++ b/client/one/partials/edit_campaign_goal_modal.html
@@ -69,7 +69,7 @@
                 </div>
                 <div class="col-xs-4" ng-if="availablePixels.length">
                     <ui-select theme="select2" search-enabled="false" id="pixel-slug-select" class="form-control" ng-model="campaignGoal.conversionGoal.goalId"  on-select="refreshConversionWindows(campaignGoal.conversionGoal.goalId)" ng-disabled="!!campaignGoal.id">
-                        <ui-select-match>{{$select.selected.slug}}</ui-select-match>
+                        <ui-select-match placeholder="Choose pixel">{{$select.selected.slug}}</ui-select-match>
                         <ui-select-choices repeat="pixel.id as pixel in availablePixels">
                             {{pixel.slug}}
                         </ui-select-choices>
@@ -102,7 +102,7 @@
                 </label>
                 <div class="col-xs-4" ng-show="conversionWindows.length">
                     <ui-select theme="select2" search-enabled="false" id="pixel-conversion-window-select" class="form-control" ng-model="campaignGoal.conversionGoal.conversionWindow"  ng-disabled="!!campaignGoal.id">
-                        <ui-select-match>{{$select.selected.name}}</ui-select-match>
+                        <ui-select-match placeholder="Choose conversion window">{{$select.selected.name}}</ui-select-match>
                         <ui-select-choices repeat="window.value as window in conversionWindows">
                             {{window.name}}
                         </ui-select-choices>
@@ -122,7 +122,7 @@
                     <zem-help-popover content="The name or id of Google Analytics goal that is tracking the conversions. Can be left empty in case of unnumbered or unnamed goal." placement="top"></zem-help-popover>
                 </label>
                 <div class="col-xs-4">
-                    <input type="text" id="ga-goal-input" class="form-control" ng-model="campaignGoal.conversionGoal.goalId" ng-focus="clearErrors('conversionGoal')"  ng-disabled="!!campaignGoal.id" />
+                    <input type="text" placeholder="Goal name" id="ga-goal-input" class="form-control" ng-model="campaignGoal.conversionGoal.goalId" ng-focus="clearErrors('conversionGoal')"  ng-disabled="!!campaignGoal.id" />
                 </div>
                 <div class="col-xs-4">
                     <label ng-repeat="error in errors.conversionGoal.goalId" class="control-label small error" for="ga-goal-input">{{ error }}</label>
@@ -135,7 +135,7 @@
                     <zem-help-popover content="The Adobe Analytics event that is tracking the conversions." placement="top"></zem-help-popover>
                 </label>
                 <div class="col-xs-4">
-                    <input type="text" id="omniture-event-input" class="form-control" ng-model="campaignGoal.conversionGoal.goalId" ng-focus="clearErrors('conversionGoal')"  ng-disabled="!!campaignGoal.id" />
+                    <input type="text" placeholder="Event name" id="omniture-event-input" class="form-control" ng-model="campaignGoal.conversionGoal.goalId" ng-focus="clearErrors('conversionGoal')"  ng-disabled="!!campaignGoal.id" />
                 </div>
                 <div class="col-xs-4">
                     <label ng-repeat="error in errors.conversionGoal.goalId" class="control-label small error" for="omniture-event-input">{{ error }}</label>
