Fixed export and columns buttons UI bug in Safari.

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -2143,6 +2143,7 @@ ul.icon-list li {
 
             .button-bar-item {
                 display: inline;
+                float: left;
                 margin-right: 10px;
                 .btn {
                     margin-left: 0;
