link to bcm in landing mode warning

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -464,6 +464,11 @@ a:visited {
     color: @default-color;
 }
 
+.info-landing-mode a {
+    text-decoration: underline;
+}
+
+
 .tabset-icon {
     margin-left: 24px;
     display: inline-block;
