more less, less css

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -462,12 +462,10 @@ a:visited {
 .info-landing-mode {
     .tabset-label;
     color: @default-color;
+    a {
+        text-decoration: underline;
+    }
 }
-
-.info-landing-mode a {
-    text-decoration: underline;
-}
-
 
 .tabset-icon {
     margin-left: 24px;
