removed old exports and renamed lots of export plus references to export

--- a/client/one/partials/ad_group_contentadsplus.html
+++ b/client/one/partials/ad_group_contentadsplus.html
@@ -29,7 +29,7 @@
                 <zem-export
                     start-date="dateRange.startDate"
                     end-date="dateRange.endDate"
-                    base-url="'api/ad_groups/' + $state.params.id + '/contentadsplus/'"
+                    base-url="'api/ad_groups/' + $state.params.id + '/contentads/'"
                     options="exportOptions">
                 </zem-export>
             </div>
