export plus is now export

--- a/client/one/partials/zem_export.html
+++ b/client/one/partials/zem_export.html
@@ -1,7 +1,7 @@
 <ui-select
         theme="select2"
         search-enabled="false"
-        ng-model="exportPlus"
+        ng-model="export"
         class="export-select">
     <ui-select-match placeholder="Export">Export</ui-select-match>
     <ui-select-choices repeat="op in exportModalTypes">
