--- a/client/one/partials/media_sources.html
+++ b/client/one/partials/media_sources.html
@@ -15,18 +15,18 @@
         <div class="button-bar">
             <div ng-if="hasPermission('zemauth.exports_plus')" class="button-bar-item pull-right">
               <zem-internal-feature ng-if="isPermissionInternal('zemauth.exports_plus')" popover-placement="bottom"></zem-internal-feature>
-                <zem-export-plus
+                <zem-export
                     start-date="dateRange.startDate"
                     end-date="dateRange.endDate"
                     base-url="exportBaseUrl"
-                    options="exportPlusOptions"
+                    options="exportOptions"
                     columns="columns"
                     order="order"
                     level="level"
                     export-sources="true"
                     zem-has-permission="hasPermission"
                     zem-is-permission-internal="isPermissionInternal">
-                </zem-export-plus>
+                </zem-export>
             </div>
 
             <zem-custom-table-cols class="pull-right" columns="columns" categories="columnCategories" local-storage-prefix="localStoragePrefix"></zem-custom-table-cols>
