--- a/client/one/partials/account_campaigns.html
+++ b/client/one/partials/account_campaigns.html
@@ -25,7 +25,7 @@
                 </button>
                 <div class="loader" ng-show="addCampaignRequestInProgress"></div>
             </div>
-            <div ng-if="!hasPermission('zemauth.exports_plus')" class="button-bar-item export-container">
+            <div class="button-bar-item export-container">
                 <zem-export
                     start-date="dateRange.startDate"
                     end-date="dateRange.endDate"
@@ -34,8 +34,7 @@
                 </zem-export>
             </div>
 
-            <div ng-if="hasPermission('zemauth.exports_plus')" class="button-bar-item pull-right">
-              <zem-internal-feature ng-if="isPermissionInternal('zemauth.exports_plus')" popover-placement="bottom"></zem-internal-feature>
+            <div class="button-bar-item pull-right">
                 <zem-export
                     start-date="dateRange.startDate"
                     end-date="dateRange.endDate"
