--- a/client/one/partials/ad_group_sources.html
+++ b/client/one/partials/ad_group_sources.html
@@ -24,17 +24,7 @@
                         zem-dropdown-css-class="add-source-dropdown">
                 </zem-dropdown>
             </div>
-            <div ng-if="!hasPermission('zemauth.exports_plus')" class="button-bar-item export-container">
-                <zem-export
-                    start-date="dateRange.startDate"
-                    end-date="dateRange.endDate"
-                    base-url="'api/ad_groups/' + $state.params.id + '/sources/'"
-                    options="exportOptions">
-                </zem-export>
-            </div>
-
-            <div ng-if="hasPermission('zemauth.exports_plus')" class="button-bar-item pull-right">
-              <zem-internal-feature ng-if="isPermissionInternal('zemauth.exports_plus')" popover-placement="bottom"></zem-internal-feature>
+            <div class="button-bar-item pull-right">
                 <zem-export
                     start-date="dateRange.startDate"
                     end-date="dateRange.endDate"
