--- a/client/one/partials/campaign_ad_groups.html
+++ b/client/one/partials/campaign_ad_groups.html
@@ -18,17 +18,7 @@
                 <button type="button" class="btn btn-add" ng-click="addAdGroup()">+ Ad group</button>
                 <div class="loader" ng-show="addGroupRequestInProgress"></div>
             </div>
-            <div ng-if="!hasPermission('zemauth.exports_plus')" class="button-bar-item export-container">
-                <zem-export
-                    start-date="dateRange.startDate"
-                    end-date="dateRange.endDate"
-                    base-url="'api/campaigns/' + $state.params.id + '/ad_groups/'"
-                    options="exportOptions">
-                </zem-export>
-            </div>
-
-            <div ng-if="hasPermission('zemauth.exports_plus')" class="button-bar-item pull-right">
-              <zem-internal-feature ng-if="isPermissionInternal('zemauth.exports_plus')" popover-placement="bottom"></zem-internal-feature>
+            <div class="button-bar-item pull-right">
                 <zem-export
                     start-date="dateRange.startDate"
                     end-date="dateRange.endDate"
