--- a/client/one/partials/media_sources.html
+++ b/client/one/partials/media_sources.html
@@ -13,8 +13,7 @@
     </div>
     <div class="section table-sources">
         <div class="button-bar">
-            <div ng-if="hasPermission('zemauth.exports_plus')" class="button-bar-item pull-right">
-              <zem-internal-feature ng-if="isPermissionInternal('zemauth.exports_plus')" popover-placement="bottom"></zem-internal-feature>
+            <div class="button-bar-item pull-right">
                 <zem-export
                     start-date="dateRange.startDate"
                     end-date="dateRange.endDate"
