--- a/client/one/components/zem-grid/templates/zem_grid.html
+++ b/client/one/components/zem-grid/templates/zem_grid.html
@@ -4,9 +4,9 @@
     </div>
     <div class="zem-grid-container">
         <div class="zem-grid">
-            <zem-grid-header options="ctrl.options" header="ctrl.grid.header" columns-widths="ctrl.columnsWidths"></zem-grid-header>
-            <zem-grid-body options="ctrl.options" rows="ctrl.grid.body.rows" columns-widths="ctrl.columnsWidths"></zem-grid-body>
-            <zem-grid-footer options="ctrl.options" footer="ctrl.grid.footer" columns-widths="ctrl.columnsWidths"></zem-grid-footer>
+            <zem-grid-header grid="ctrl.grid"></zem-grid-header>
+            <zem-grid-body grid="ctrl.grid"></zem-grid-body>
+            <zem-grid-footer grid="ctrl.grid"></zem-grid-footer>
         </div>
     </div>
 </div>
