--- a/client/one/components/zem-grid/templates/zem_grid_footer.html
+++ b/client/one/components/zem-grid/templates/zem_grid_footer.html
@@ -1,8 +1,8 @@
 <div class="zem-grid-footer">
     <div class="zem-grid-row">
         <div class="zem-grid-cell"
-             ng-repeat="col in footer.data.stats track by $index"
-             ng-style="getCellStyle($index)">
+             ng-repeat="col in ctrl.grid.footer.data.stats track by $index"
+             ng-style="ctrl.getCellStyle($index)">
             <span class="col-title">{{ col }}</span>
         </div>
     </div>
