--- a/client/one/partials/main.html
+++ b/client/one/partials/main.html
@@ -2,9 +2,9 @@
     <div class="row header" ng-include src="'/partials/header.html'"></div>
 
     <div class="row body">
-        <div class="sidebar sidebar-new" ng-show="accountsAccess.hasAccounts && navigationPaneVisible">
+        <div class="sidebar" ng-show="accountsAccess.hasAccounts && navigationPaneVisible">
             <div class="loader" ng-if="loadSidebarInProgress"></div>
-            <div id="nav-new">
+            <div id="nav">
                 <zem-nav-search zem-current-account="account" zem-all-accounts="accounts" zem-can-access-accounts="{{ canAccessAccounts() }}" zem-can-access-campaigns="{{ canAccessCampaigns() }}" zem-default-account-state="{{ getDefaultAccountState() }}" zem-default-campaign-state="{{ getDefaultCampaignState() }}" zem-show-archived="getShowArchived()" zem-default-ad-group-state="{{ getDefaultAdGroupState() }}"></zem-nav-search>
                 <div id="nav-menu">
                     <div class="nav-group account-group" ng-if="$state.includes('main.allAccounts.*') && (!account.archived || getShowArchived())" ng-repeat="account in accounts">
