Fixed performance icon order triangle position.

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -2851,6 +2851,16 @@ ul.icon-list li {
         .arrow-up();
     }
 
+    thead > tr > th.arrow.ordered a.performance-icon.order,
+    thead > tr > th.arrow.ordered-reverse a.performance-icon.order {
+        margin-right: 15px;
+
+        &:after {
+            position: absolute;
+            margin-left: 17px !important;
+        }
+    }
+
     thead > tr > th.trimmed-currency a {
         display: inline-block;
         margin-right: 1ex;
