--- a/client/one/partials/tabset.html
+++ b/client/one/partials/tabset.html
@@ -9,5 +9,5 @@
         </tab-heading>
     </tab>
     <span ng-show="isAdGroupPaused()"><span class="tabset-little-red-square"></span><span class="warning-paused">This Ad Group is currently not running.</span></span>
-    <span ng-show="isCampaignLanding()"><span class="tabset-landing-mode-icon"></span><span class="info-landing-mode">Campaign is running in landing mode. <a href="#" ng-click="manageBudget()">Add budget</a>.</span></span>
+    <span ng-show="isCampaignLanding()"><span class="tabset-landing-mode-icon"></span><span class="info-landing-mode">Campaign is running in landing mode. <a href="#" ng-click="manageBudget()">Add budget</a></span></span>
 </tabset>
