--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -969,6 +969,15 @@ img.zem-icon {
     color: @infobox-dark-gray;
 }
 
+.infobox-reloading-icon {
+    color: #00cc18;
+    text-align: center;
+    background-image: url('img/loader.gif');
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: 15px 15px;
+}
+
 .infobox-active-icon {
     color: #00cc18;
     text-align: center;
@@ -981,7 +990,7 @@ img.zem-icon {
 .infobox-inactive-icon {
     color: @infobox-black;
     text-align: center;
-    background-image: url('img/adgroup_status_paused_gray.svg');
+    background-image: url('img/adgroup_status_enabled_red.svg');
     background-position: center center;
     background-repeat: no-repeat;
     background-size: 15px 15px;
@@ -990,7 +999,7 @@ img.zem-icon {
 .infobox-stopped-icon {
     color: @infobox-black;
     text-align: center;
-    background-image: url('img/adgroup_status_paused_red.svg');
+    background-image: url('img/adgroup_status_paused_gray.svg');
     background-position: center center;
     background-repeat: no-repeat;
     background-size: 15px 15px;
