Added CTR to table and chart on all accounts level.

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -2755,6 +2755,7 @@ ul.icon-list li {
 
     thead > tr > th.arrow.ordered a.performance-icon.order,
     thead > tr > th.arrow.ordered-reverse a.performance-icon.order {
+        position: relative;
         margin-right: 15px;
 
         &:after {
