--- a/client/one/partials/ad_group_settings.html
+++ b/client/one/partials/ad_group_settings.html
@@ -211,7 +211,7 @@
                 <div class="col">
                     <div class="radio" ng-repeat='autopilotState in options.adGroupSettingsAutopilotStates'>
                         <label>
-                            <input type="radio" ng-model="settings.autopilotState" ng-value="autopilotState.value"> {{ autopilotState.name }} <zem-help-popover content="{{autopilotState.help}}" placement="right"></zem-help-popover>
+                            <input type="radio" ng-model="settings.autopilotState" ng-value="autopilotState.value" ng-disabled="isCampaignLanding()"> {{ autopilotState.name }} <zem-help-popover content="{{autopilotState.help}}" placement="right"></zem-help-popover>
                         </label>
                     </div>
                 </div>
@@ -227,7 +227,7 @@
                 <div class="col-xs-2">
                     <div class="input-group">
                         <span class="input-group-addon">$</span>
-                        <input id="autopilot-budget" type="text" class="form-control" ng-model="settings.autopilotBudget" fraction-size="0" zem-currency-input>
+                        <input id="autopilot-budget" type="text" class="form-control" ng-model="settings.autopilotBudget" fraction-size="0" zem-currency-input ng-disabled="isCampaignLanding()">
                     </div>
                 </div>
                 <div class="col-xs-4">
