Rebranded Auto-Pilot as Autopilot

--- a/client/one/partials/ad_group_sources.html
+++ b/client/one/partials/ad_group_sources.html
@@ -50,7 +50,7 @@
             If you have any questions please contact us at <a href="mailto:help@zemanta.com">help@zemanta.com</a>.
         </alert>
         <alert type="success" class="alert-auto-pilot-changes" ng-show="autopilotChanges">
-            Following Your change to a Media Source's state, Auto-Pilot has successfully adjusted daily budgets of the following Media Sources: {{autopilotChanges}}.
+            Following Your change to a Media Source's state, Autopilot has successfully adjusted daily budgets of the following Media Sources: {{autopilotChanges}}.
         </alert>
 
         <zem-table zem-table-columns="columns" zem-table-rows="rows" zem-table-total-row="totals" zem-table-notifications="notifications" zem-table-show-loader="loadRequestInProgress" zem-table-order="order" zem-table-order-callback="orderTableData(order)" zem-table-data-status="dataStatus"></zem-table>
