warning in adgroup settings if autopilot is disabled, renamed a method and fixed tests

--- a/client/one/partials/ad_group_settings.html
+++ b/client/one/partials/ad_group_settings.html
@@ -202,8 +202,13 @@
                 Auto-Pilot
                 <zem-help-popover content="Bid CPC and Daily Budget Allocation Automation Settings." placement="top"></zem-help-popover>
             </label>
-
-            <div class="form-group indented" ng-class="{'has-error': !!errors.autopilotState}">
+			<div class="col-xs-12 alert alert-info form-alert-box" ng-if="isCampaignLanding()" >
+                <div class="form-alert-exclamation">
+                    <img class="warning-icon" ng-src="{{ config.static_url }}/one/img/notification-warning.svg"></img>
+                </div>
+                <div class="form-alert-body">Autopilot is automatically enabled because the campaign is in landing mode. </div>
+            </div>
+            <div class="col-xs-12 form-group indented" ng-class="{'has-error': !!errors.autopilotState}">
                 <label class="col-xs-2 control-label">
                     Auto-Pilot's Status
                     <zem-help-popover content="State of the Auto-Pilot on this Ad Group" placement="top"></zem-help-popover>
