--- a/client/one/partials/ad_group_contentads.html
+++ b/client/one/partials/ad_group_contentads.html
@@ -18,10 +18,7 @@
                 <button
                      type="button"
                      class="btn btn-add"
-                     ng-click="addContentAds()"
-                     zem-tutorial-popover-condition-promise="canShowOnboardingGuidance()"
-                     zem-tutorial-popover="Click here to add content ads"
-                     zem-tutorial-popover-placement="top">
+                     ng-click="addContentAds()">
                     + Content Ads
                 </button>
             </div>
