--- a/client/one/partials/campaign_settings.html
+++ b/client/one/partials/campaign_settings.html
@@ -84,13 +84,7 @@
             </div>
         </div>
 
-        <button
-             type="button" class="btn btn-primary" ng-click="saveSettings()"
-             zem-tutorial-popover-condition-promise="campaignHasFreshSettings()"
-             zem-tutorial-popover="Click here to save campaign settings"
-             zem-tutorial-popover-placement="top">
-            Save
-        </button>
+        <button type="button" class="btn btn-primary" ng-click="saveSettings()">Save</button>
         <button type="button" class="btn btn-default" ng-click="getSettings(true)">Discard</button>
 
         <div class="loader" ng-show="requestInProgress"></div>
