removed Can upload new content ads permission

--- a/client/one/partials/ad_group_contentads.html
+++ b/client/one/partials/ad_group_contentads.html
@@ -13,8 +13,7 @@
     </div>
     <div class="section table-ad-group-ads-plus">
         <div class="button-bar">
-            <div ng-if="hasPermission('zemauth.upload_content_ads')" class="button-bar-item">
-                <zem-internal-feature ng-if="isPermissionInternal('zemauth.upload_content_ads')" popover-placement="bottom"></zem-internal-feature>
+            <div class="button-bar-item">
                 <button
                      type="button"
                      class="btn btn-add"
