--- a/client/one/partials/zem_conversion_pixels.html
+++ b/client/one/partials/zem_conversion_pixels.html
@@ -1,4 +1,4 @@
-<div class="zem-conversion-pixels" ng-if="hasPermission('zemauth.manage_conversion_pixels')">
+<div class="zem-conversion-pixels">
     <div class="title">
         Set Up Conversion Pixels
         <zem-help-popover content="A conversion is an action that a person makes while consuming your content such as downloading an eBook, subscribing to a newsletter, adding an item to the shopping, or viewing a particular page." placement="right"></zem-help-popover>
