--- a/client/one/partials/zem_conversion_goals.html
+++ b/client/one/partials/zem_conversion_goals.html
@@ -1,4 +1,4 @@
-<div class="zem-conversion-goals col-xs-6" ng-if="hasPermission('zemauth.manage_conversion_goals')">
+<div class="zem-conversion-goals col-xs-6">
     <div class="title">
         Conversions
         <zem-help-popover content="If your goal is to increase conversions (ie. registrations, sales, etc.) for your content, Zemanta’s conversion and goal tracking tools can help. By placing a conversion pixel on your content pages you’ll know exactly which networks and articles led to your conversion." placement="right"></zem-help-popover>
