removed Can filter sources perm.

--- a/client/one/partials/zem_filter.html
+++ b/client/one/partials/zem_filter.html
@@ -1,9 +1,7 @@
-<div id="filter" class="pull-right" ng-show="hasPermission('zemauth.filter_sources')">
+<div id="filter" class="pull-right">
     <div id="filter-dropdown" class="dropdown" dropdown on-toggle="onToggle(open)" is-open="isFilterOpen">
-
-        <zem-internal-feature popover-placement="left" ng-if="isPermissionInternal('zemauth.filter_sources')"></zem-internal-feature>
-        <div class="btn btn-default" ng-class="{'filter-enabled': isFilterOn() && hasPermission('zemauth.filter_sources')}">
-            <div ng-if="isFilterOn() && hasPermission('zemauth.filter_sources')">
+        <div class="btn btn-default" ng-class="{'filter-enabled': isFilterOn()}">
+            <div ng-if="isFilterOn()">
                 <div class="btn-remove" ng-click="removeFiltering()">
                     <img ng-src="{{ config.static_url }}/one/img/x.svg">
                 </div>
@@ -12,7 +10,7 @@
                     <img class="filter-icon" ng-src="{{ config.static_url }}/one/img/filter_icon_white.svg"></img>
                 </div>
             </div>
-            <div ng-if="!isFilterOn() || !hasPermission('zemauth.filter_sources')">
+            <div ng-if="!isFilterOn()">
                 <div class="dropdown-toggle" dropdown-toggle>
                     <img class="filter-icon" ng-src="{{ config.static_url }}/one/img/filter_icon_black.svg"></img>
                 </div>
@@ -20,9 +18,7 @@
         </div>
 
         <ul class="filter-menu dropdown-menu" dropdown-menu>
-
-            <li ng-show="hasPermission('zemauth.filter_sources')">
-                <zem-internal-feature ng-if="isPermissionInternal('zemauth.filter_sources')" popover-placement="left"></zem-internal-feature>
+            <li>
                 <div class="title">Filter by Media Source</div>
                 <select ui-select2="{minimumResultsForSearch: -1, formatNoMatches: 'No sources', dropdownCssClass: 'select2-filter'}" ng-model="sourceIdToFilter" ng-change="addFilteredSource(sourceIdToFilter)" class="add-source-filter" data-placeholder="+ Media Source">
                     <option value=""></option>
