removed Can view and use bulk content ads actions. perm.

--- a/client/one/partials/ad_group_contentads.html
+++ b/client/one/partials/ad_group_contentads.html
@@ -22,7 +22,7 @@
                 </button>
             </div>
 
-            <div ng-show="hasPermission('zemauth.content_ads_bulk_actions')" class="button-bar-item">
+            <div class="button-bar-item">
               <zem-dropdown
                    zem-placeholder="Bulk Actions"
                    zem-on-select="executeBulkAction(selected)"
