Fixed mising infobox

--- a/client/one/partials/media_sources.html
+++ b/client/one/partials/media_sources.html
@@ -1,6 +1,6 @@
 <div class="page page-media-sources">
     <div class="section">
-        <div class="graph-infobox-parent" ng-class="{'graph-collapsed': !graphVisible">
+        <div class="graph-infobox-parent" ng-class="{'graph-collapsed': !graphVisible}">
             <div class="graph-infobox-row">
                 <div class="graph-container">
                     <zem-chart zem-data="chartData" zem-metric1="chartMetric1" zem-metric2="chartMetric2" zem-metric-options="chartMetricOptions" zem-min-date="dateRange.startDate" zem-max-date="dateRange.endDate" zem-on-remove="selectedSourceRemoved(id)" local-storage-prefix="localStoragePrefix"></zem-chart>
