fixet client unit tests and added message of min amount to go out of landing

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -3253,6 +3253,14 @@ zem-editable-currency-field {
                 &:last-child {
                     padding-right: 15px;
                 }
+
+                &:last-child:not(label) {
+                    padding-right: 5px;
+                }
+
+                &p.text-info {
+                    padding-left: 7px;
+                }
             }
 
             .btn {
