partially added account name to account settings tab

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -2334,6 +2334,13 @@ ul.icon-list li {
     }
 }
 
+
+.page-account-account {
+    form#form-account-agency {
+        margin-bottom: 45px;
+    }
+}
+
 .page-account-agency {
     form#form-account-agency {
         margin-bottom: 45px;
