added internal ui flags

--- a/client/one/partials/account_account.html
+++ b/client/one/partials/account_account.html
@@ -3,6 +3,7 @@
     <form ng-if="hasPermission('zemauth.can_manage_agency')" id="form-account-agency" class="form-horizontal">
         <div class="form-group" ng-class="{'has-error': !!errors.name}">
             <label for="name-input" class="col-xs-2 control-label">
+                <zem-internal-feature ng-if="isPermissionInternal('zemauth.can_manage_agency')" popover-placement="bottom"></zem-internal-feature>
                 Name
                 <zem-help-popover content="Name of the account." placement="top"></zem-help-popover>
             </label>
@@ -15,6 +16,7 @@
 
         <div class="form-group" ng-class="{'has-error': !!errors.defaultAccountManager}">
             <label for="account-manager-select" class="col-xs-2 control-label">
+                <zem-internal-feature ng-if="isPermissionInternal('zemauth.can_manage_agency')" popover-placement="bottom"></zem-internal-feature>
                 Account Manager
                 <zem-help-popover content="Account manager responsible for the campaign and the communication with the client." placement="top"></zem-help-popover>
             </label>
