added premission for setting sales representative

--- a/client/one/partials/account_account.html
+++ b/client/one/partials/account_account.html
@@ -31,6 +31,23 @@
             <label ng-repeat="error in errors.defaultAccountManager" class="control-label error" for="account-manager-select">{{ error }}</label>
         </div>
 
+        <div ng-if="hasPermission('zemauth.can_set_account_sales_representative')" class="form-group" ng-class="{'has-error': !!errors.defaultSalesRepresentative}">
+            <label for="sales-representative-select" class="col-xs-2 control-label">
+                <zem-internal-feature ng-if="isPermissionInternal('zemauth.can_set_account_sales_representative')" popover-placement="bottom"></zem-internal-feature>
+                Sales Representative
+                <zem-help-popover content="Sales representative responsible for the campaign and the communication with the client." placement="top"></zem-help-popover>
+            </label>
+            <div class="col-xs-3">
+                <ui-select theme="select2" id="sales-representative-select" class="form-control" ng-model="settings.defaultSalesRepresentative">
+                    <ui-select-match>{{$select.selected.name}}</ui-select-match>
+                    <ui-select-choices repeat="rep.id as rep in salesReps | orderBy:getName | filter:$select.search">
+                        <div ng-bind-html="rep.name | highlight: $select.search"></div>
+                    </ui-select-choices>
+                </ui-select>
+            </div>
+            <label ng-repeat="error in errors.defaultSalesRepresentative" class="control-label error" for="sales-representative-select">{{ error }}</label>
+        </div>
+
         <button type="button" class="btn btn-primary" ng-click="saveSettings()">Save</button>
         <button type="button" class="btn btn-default" ng-click="getSettings(true)">Discard</button>
         <div class="loader" ng-show="requestInProgress"></div>
