--- a/client/one/partials/account_account.html
+++ b/client/one/partials/account_account.html
@@ -94,6 +94,63 @@
         <span ng-show="discarded" class="success feedback-text">Your updates have been discarded.</span>
     </form>
 
+    <div class="form-horizontal table-access-permissions" ng-if="hasPermission('zemauth.can_manage_agency') && hasPermission('zemauth.account_agency_access_permissions')">
+        <div class="form-group">
+            <label for="first-name-input" class="col-xs-2 control-label">
+                <zem-internal-feature ng-if="isPermissionInternal('zemauth.account_agency_access_permissions')" popover-placement="bottom"></zem-internal-feature>
+                Access Permissions
+                <zem-help-popover content="Users who have access to the account you're currently on." placement="top"></zem-help-popover>
+            </label>
+            <div class="col-xs-8">
+                <div ng-repeat="user in users" class="form-group existing-user-row">
+                    <div ng-if="user.removed">
+                        <label class="col-xs-6 control-label undo">The user was removed. <a ng-show="!user.requestInProgress" ng-click="undoRemove(user.id)">Undo?</a></label>
+                        <div class="loader" ng-show="user.requestInProgress"></div>
+                    </div>
+                    <div ng-if="!user.removed">
+                        <div class="col-xs-6 user-name-col">
+                            <p class="control-label"><b>{{user.name}} </b>({{user.email}})</p>
+                            <span ng-show="user.saved && !user.emailSent && !user.emailResent" class="success">This user can now access this account. Since this is an existing user, no activation email was sent.</span>
+                            <span ng-show="user.saved && user.emailSent && !user.emailResent" class="success">An introductory email was sent to this user.</span>
+                            <span ng-show="user.saved && user.emailResent" class="success">New activation email sent.</span>
+                        </div>
+                        <div class="col-xs-2">
+                            <div class="loader" ng-show="user.requestInProgress"></div>
+
+                            <div class="dropdown" dropdown ng-show="!user.requestInProgress" aria-haspopup="true">
+                                <a href class="btn btn-default dropdown-toggle" dropdown-toggle>Edit&nbsp;<span class="caret"></span></a>
+                                <ul class="dropdown-menu dropdown-menu-activation" role="menu">
+                                    <li><a ng-show="!user.is_active" tabindex="-1" ng-click="userActionChange('resend', user.id)" href="#">Resend Activation Mail</a></li>
+                                    <li><a tabindex="-1" ng-click="userActionChange('remove', user.id)" href="#">Remove</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="add-user-row" class="form-group">
+                    <div class="col-xs-2">
+                        <input id="first-name-input" type="text" ng-class="{'has-error': !!addUserErrors.errors.firstName}" class="form-control" placeholder="Name" ng-model="addUserData.firstName">
+                    </div>
+                    <div class="col-xs-2">
+                        <input id="last-name-input" type="text" ng-class="{'has-error': !!addUserErrors.errors.lastName}" class="form-control" placeholder="Last name" ng-model="addUserData.lastName">
+                    </div>
+                    <div class="col-xs-4">
+                        <input id="email-input" type="text" ng-class="{'has-error': !!addUserErrors.errors.email}" class="form-control" placeholder="Email" ng-model="addUserData.email">
+                    </div>
+                    <div class="col-xs-4">
+                        <button type="button" class="btn btn-default" ng-click="addUser()">Add new user</button>
+                        <div class="loader" ng-show="addUserRequestInProgress"></div>
+                    </div>
+                    <br />
+                    <div class="col-xs-12" ng-show="addUserErrors">
+                        <label class="error">{{addUserErrors.message}}</label>
+                        <label ng-show="addUserErrors.conflict" class="error"></label>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <zem-conversion-pixels
         zem-account="account"
         zem-has-permission="hasPermission"
